include/constantine/curves/bls12_381.h

typedef struct { secret_word limbs[CTT_WORDS_REQUIRED(255)]; } bls12_381_fr;
typedef struct { secret_word limbs[CTT_WORDS_REQUIRED(381)]; } bls12_381_fp;
typedef struct { bls12_381_fp c[2]; } bls12_381_fp2;
typedef struct { bls12_381_fp x, y; } bls12_381_g1_aff;
typedef struct { bls12_381_fp x, y, z; } bls12_381_g1_jac;
typedef struct { bls12_381_fp x, y, z; } bls12_381_g1_prj;
typedef struct { bls12_381_fp2 x, y; } bls12_381_g2_aff;
typedef struct { bls12_381_fp2 x, y, z; } bls12_381_g2_jac;
typedef struct { bls12_381_fp2 x, y, z; } bls12_381_g2_prj;
void        ctt_bls12_381_g1_prj_sum(bls12_381_g1_prj* r, const bls12_381_g1_prj* P, const bls12_381_g1_prj* Q);
void        ctt_bls12_381_g1_prj_add_in_place(bls12_381_g1_prj* P, const bls12_381_g1_prj* Q);
void        ctt_bls12_381_g1_prj_diff(bls12_381_g1_prj* r, const bls12_381_g1_prj* P, const bls12_381_g1_prj* Q);
void        ctt_bls12_381_g1_prj_double(bls12_381_g1_prj* r, const bls12_381_g1_prj* P);
void        ctt_bls12_381_g1_prj_double_in_place(bls12_381_g1_prj* P);
void        ctt_bls12_381_g1_prj_affine(bls12_381_g1_aff* dst, const bls12_381_g1_prj* src);
void        ctt_bls12_381_g1_prj_from_affine(bls12_381_g1_prj* dst, const bls12_381_g1_aff* src);
void        ctt_bls12_381_g1_prj_batch_affine(const bls12_381_g1_aff dst[], const bls12_381_g1_prj src[], size_t n);
void        ctt_bls12_381_g1_prj_scalar_mul_big_coef(bls12_381_g1_prj* P, const big255* scalar);
void        ctt_bls12_381_g1_prj_scalar_mul_fr_coef(bls12_381_g1_prj* P, const bls12_381_fr* scalar);
void        ctt_bls12_381_g1_prj_scalar_mul_big_coef_vartime(bls12_381_g1_prj* P, const big255* scalar);
void        ctt_bls12_381_g1_prj_scalar_mul_fr_coef_vartime(bls12_381_g1_prj* P, const bls12_381_fr* scalar);
void        ctt_bls12_381_g1_prj_multi_scalar_mul_big_coefs_vartime(bls12_381_g1_prj* r, const big255 coefs[], const bls12_381_g1_aff points[], size_t len);
void        ctt_bls12_381_g1_prj_multi_scalar_mul_fr_coefs_vartime(bls12_381_g1_prj* r, const bls12_381_fr coefs[], const bls12_381_g1_aff points[], size_t len);
secret_bool ctt_bls12_381_g2_aff_is_eq(const bls12_381_g2_aff* P, const bls12_381_g2_aff* Q);
secret_bool ctt_bls12_381_g2_aff_is_neutral(const bls12_381_g2_aff* P);
void        ctt_bls12_381_g2_aff_set_neutral(bls12_381_g2_aff* P);
void        ctt_bls12_381_g2_aff_ccopy(bls12_381_g2_aff* P, const bls12_381_g2_aff* Q, secret_bool ctl);
secret_bool ctt_bls12_381_g2_aff_is_on_curve(const bls12_381_fp2* x, const bls12_381_fp2* y);
void        ctt_bls12_381_g2_aff_neg(bls12_381_g2_aff* P, const bls12_381_g2_aff* Q);
void        ctt_bls12_381_g2_aff_neg_in_place(bls12_381_g2_aff* P);
secret_bool ctt_bls12_381_g2_jac_is_eq(const bls12_381_g2_jac* P, const bls12_381_g2_jac* Q);
secret_bool ctt_bls12_381_g2_jac_is_neutral(const bls12_381_g2_jac* P);
void        ctt_bls12_381_g2_jac_set_neutral(bls12_381_g2_jac* P);
void        ctt_bls12_381_g2_jac_ccopy(bls12_381_g2_jac* P, const bls12_381_g2_jac* Q, secret_bool ctl);
void        ctt_bls12_381_g2_jac_neg(bls12_381_g2_jac* P, const bls12_381_g2_jac* Q);
void        ctt_bls12_381_g2_jac_neg_in_place(bls12_381_g2_jac* P);
void        ctt_bls12_381_g2_jac_cneg_in_place(bls12_381_g2_jac* P, secret_bool ctl);
void        ctt_bls12_381_g2_jac_sum(bls12_381_g2_jac* r, const bls12_381_g2_jac* P, const bls12_381_g2_jac* Q);
void        ctt_bls12_381_g2_jac_add_in_place(bls12_381_g2_jac* P, const bls12_381_g2_jac* Q);
void        ctt_bls12_381_g2_jac_diff(bls12_381_g2_jac* r, const bls12_381_g2_jac* P, const bls12_381_g2_jac* Q);
void        ctt_bls12_381_g2_jac_double(bls12_381_g2_jac* r, const bls12_381_g2_jac* P);
void        ctt_bls12_381_g2_jac_double_in_place(bls12_381_g2_jac* P);
void        ctt_bls12_381_g2_jac_affine(bls12_381_g2_aff* dst, const bls12_381_g2_jac* src);
void        ctt_bls12_381_g2_jac_from_affine(bls12_381_g2_jac* dst, const bls12_381_g2_aff* src);
void        ctt_bls12_381_g2_jac_batch_affine(const bls12_381_g2_aff dst[], const bls12_381_g2_jac src[], size_t n);
void        ctt_bls12_381_g2_jac_scalar_mul_big_coef(bls12_381_g2_jac* P, const big255* scalar);
void        ctt_bls12_381_g2_jac_scalar_mul_fr_coef(bls12_381_g2_jac* P, const bls12_381_fr* scalar);
void        ctt_bls12_381_g2_jac_scalar_mul_big_coef_vartime(bls12_381_g2_jac* P, const big255* scalar);
void        ctt_bls12_381_g2_jac_scalar_mul_fr_coef_vartime(bls12_381_g2_jac* P, const bls12_381_fr* scalar);
void        ctt_bls12_381_g2_jac_multi_scalar_mul_big_coefs_vartime(bls12_381_g2_jac* r, const big255 coefs[], const bls12_381_g2_aff points[], size_t len);
void        ctt_bls12_381_g2_jac_multi_scalar_mul_fr_coefs_vartime(bls12_381_g2_jac* r, const bls12_381_fr coefs[], const bls12_381_g2_aff points[], size_t len);
secret_bool ctt_bls12_381_g2_prj_is_eq(const bls12_381_g2_prj* P, const bls12_381_g2_prj* Q);
secret_bool ctt_bls12_381_g2_prj_is_neutral(const bls12_381_g2_prj* P);
void        ctt_bls12_381_g2_prj_set_neutral(bls12_381_g2_prj* P);
void        ctt_bls12_381_g2_prj_ccopy(bls12_381_g2_prj* P, const bls12_381_g2_prj* Q, secret_bool ctl);
void        ctt_bls12_381_g2_prj_neg(bls12_381_g2_prj* P, const bls12_381_g2_prj* Q);
void        ctt_bls12_381_g2_prj_neg_in_place(bls12_381_g2_prj* P);
void        ctt_bls12_381_g2_prj_cneg_in_place(bls12_381_g2_prj* P, secret_bool ctl);
void        ctt_bls12_381_g2_prj_sum(bls12_381_g2_prj* r, const bls12_381_g2_prj* P, const bls12_381_g2_prj* Q);
void        ctt_bls12_381_g2_prj_add_in_place(bls12_381_g2_prj* P, const bls12_381_g2_prj* Q);
void        ctt_bls12_381_g2_prj_diff(bls12_381_g2_prj* r, const bls12_381_g2_prj* P, const bls12_381_g2_prj* Q);
void        ctt_bls12_381_g2_prj_double(bls12_381_g2_prj* r, const bls12_381_g2_prj* P);
void        ctt_bls12_381_g2_prj_double_in_place(bls12_381_g2_prj* P);
void        ctt_bls12_381_g2_prj_affine(bls12_381_g2_aff* dst, const bls12_381_g2_prj* src);
void        ctt_bls12_381_g2_prj_from_affine(bls12_381_g2_prj* dst, const bls12_381_g2_aff* src);
void        ctt_bls12_381_g2_prj_batch_affine(const bls12_381_g2_aff dst[], const bls12_381_g2_prj src[], size_t n);
void        ctt_bls12_381_g2_prj_scalar_mul_big_coef(bls12_381_g2_prj* P, const big255* scalar);
void        ctt_bls12_381_g2_prj_scalar_mul_fr_coef(bls12_381_g2_prj* P, const bls12_381_fr* scalar);
void        ctt_bls12_381_g2_prj_scalar_mul_big_coef_vartime(bls12_381_g2_prj* P, const big255* scalar);
void        ctt_bls12_381_g2_prj_scalar_mul_fr_coef_vartime(bls12_381_g2_prj* P, const bls12_381_fr* scalar);
void        ctt_bls12_381_g2_prj_multi_scalar_mul_big_coefs_vartime(bls12_381_g2_prj* r, const big255 coefs[], const bls12_381_g2_aff points[], size_t len);
void        ctt_bls12_381_g2_prj_multi_scalar_mul_fr_coefs_vartime(bls12_381_g2_prj* r, const bls12_381_fr coefs[], const bls12_381_g2_aff points[], size_t len);
void        ctt_bls12_381_g1_aff_sswu_sha256(bls12_381_g1_aff* r, const byte augmentation[], size_t augmentation_len, const byte message[], size_t message_len, const byte domainSepTag[], size_t domainSepTag_len);
void        ctt_bls12_381_g1_jac_sswu_sha256(bls12_381_g1_jac* r, const byte augmentation[], size_t augmentation_len, const byte message[], size_t message_len, const byte domainSepTag[], size_t domainSepTag_len);
void        ctt_bls12_381_g1_prj_sswu_sha256(bls12_381_g1_prj* r, const byte augmentation[], size_t augmentation_len, const byte message[], size_t message_len, const byte domainSepTag[], size_t domainSepTag_len);
void        ctt_bls12_381_g2_aff_sswu_sha256(bls12_381_g2_aff* r, const byte augmentation[], size_t augmentation_len, const byte message[], size_t message_len, const byte domainSepTag[], size_t domainSepTag_len);
void        ctt_bls12_381_g2_jac_sswu_sha256(bls12_381_g2_jac* r, const byte augmentation[], size_t augmentation_len, const byte message[], size_t message_len, const byte domainSepTag[], size_t domainSepTag_len);
void        ctt_bls12_381_g2_prj_sswu_sha256(bls12_381_g2_prj* r, const byte augmentation[], size_t augmentation_len, const byte message[], size_t message_len, const byte domainSepTag[], size_t domainSepTag_len);