constantine-rust/constantine-sys/src/bindings32.rs

extern "C" {
    pub fn ctt_bls12_381_g1_prj_sum(
        r: *mut bls12_381_g1_prj,
        P: *const bls12_381_g1_prj,
        Q: *const bls12_381_g1_prj,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_add_in_place(P: *mut bls12_381_g1_prj, Q: *const bls12_381_g1_prj);
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_diff(
        r: *mut bls12_381_g1_prj,
        P: *const bls12_381_g1_prj,
        Q: *const bls12_381_g1_prj,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_double(r: *mut bls12_381_g1_prj, P: *const bls12_381_g1_prj);
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_double_in_place(P: *mut bls12_381_g1_prj);
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_affine(dst: *mut bls12_381_g1_aff, src: *const bls12_381_g1_prj);
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_from_affine(
        dst: *mut bls12_381_g1_prj,
        src: *const bls12_381_g1_aff,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_batch_affine(
        dst: *const bls12_381_g1_aff,
        src: *const bls12_381_g1_prj,
        n: usize,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_scalar_mul_big_coef(
        P: *mut bls12_381_g1_prj,
        scalar: *const big255,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_scalar_mul_fr_coef(
        P: *mut bls12_381_g1_prj,
        scalar: *const bls12_381_fr,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_scalar_mul_big_coef_vartime(
        P: *mut bls12_381_g1_prj,
        scalar: *const big255,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_scalar_mul_fr_coef_vartime(
        P: *mut bls12_381_g1_prj,
        scalar: *const bls12_381_fr,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_multi_scalar_mul_big_coefs_vartime(
        r: *mut bls12_381_g1_prj,
        coefs: *const big255,
        points: *const bls12_381_g1_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_multi_scalar_mul_fr_coefs_vartime(
        r: *mut bls12_381_g1_prj,
        coefs: *const bls12_381_fr,
        points: *const bls12_381_g1_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_aff_is_eq(
        P: *const bls12_381_g2_aff,
        Q: *const bls12_381_g2_aff,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_g2_aff_is_neutral(P: *const bls12_381_g2_aff) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_g2_aff_set_neutral(P: *mut bls12_381_g2_aff);
}
extern "C" {
    pub fn ctt_bls12_381_g2_aff_ccopy(
        P: *mut bls12_381_g2_aff,
        Q: *const bls12_381_g2_aff,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_aff_is_on_curve(
        x: *const bls12_381_fp2,
        y: *const bls12_381_fp2,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_g2_aff_neg(P: *mut bls12_381_g2_aff, Q: *const bls12_381_g2_aff);
}
extern "C" {
    pub fn ctt_bls12_381_g2_aff_neg_in_place(P: *mut bls12_381_g2_aff);
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_is_eq(
        P: *const bls12_381_g2_jac,
        Q: *const bls12_381_g2_jac,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_is_neutral(P: *const bls12_381_g2_jac) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_set_neutral(P: *mut bls12_381_g2_jac);
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_ccopy(
        P: *mut bls12_381_g2_jac,
        Q: *const bls12_381_g2_jac,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_neg(P: *mut bls12_381_g2_jac, Q: *const bls12_381_g2_jac);
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_neg_in_place(P: *mut bls12_381_g2_jac);
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_cneg_in_place(P: *mut bls12_381_g2_jac, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_sum(
        r: *mut bls12_381_g2_jac,
        P: *const bls12_381_g2_jac,
        Q: *const bls12_381_g2_jac,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_add_in_place(P: *mut bls12_381_g2_jac, Q: *const bls12_381_g2_jac);
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_diff(
        r: *mut bls12_381_g2_jac,
        P: *const bls12_381_g2_jac,
        Q: *const bls12_381_g2_jac,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_double(r: *mut bls12_381_g2_jac, P: *const bls12_381_g2_jac);
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_double_in_place(P: *mut bls12_381_g2_jac);
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_affine(dst: *mut bls12_381_g2_aff, src: *const bls12_381_g2_jac);
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_from_affine(
        dst: *mut bls12_381_g2_jac,
        src: *const bls12_381_g2_aff,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_batch_affine(
        dst: *const bls12_381_g2_aff,
        src: *const bls12_381_g2_jac,
        n: usize,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_scalar_mul_big_coef(
        P: *mut bls12_381_g2_jac,
        scalar: *const big255,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_scalar_mul_fr_coef(
        P: *mut bls12_381_g2_jac,
        scalar: *const bls12_381_fr,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_scalar_mul_big_coef_vartime(
        P: *mut bls12_381_g2_jac,
        scalar: *const big255,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_scalar_mul_fr_coef_vartime(
        P: *mut bls12_381_g2_jac,
        scalar: *const bls12_381_fr,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_multi_scalar_mul_big_coefs_vartime(
        r: *mut bls12_381_g2_jac,
        coefs: *const big255,
        points: *const bls12_381_g2_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_multi_scalar_mul_fr_coefs_vartime(
        r: *mut bls12_381_g2_jac,
        coefs: *const bls12_381_fr,
        points: *const bls12_381_g2_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_is_eq(
        P: *const bls12_381_g2_prj,
        Q: *const bls12_381_g2_prj,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_is_neutral(P: *const bls12_381_g2_prj) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_set_neutral(P: *mut bls12_381_g2_prj);
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_ccopy(
        P: *mut bls12_381_g2_prj,
        Q: *const bls12_381_g2_prj,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_neg(P: *mut bls12_381_g2_prj, Q: *const bls12_381_g2_prj);
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_neg_in_place(P: *mut bls12_381_g2_prj);
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_cneg_in_place(P: *mut bls12_381_g2_prj, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_sum(
        r: *mut bls12_381_g2_prj,
        P: *const bls12_381_g2_prj,
        Q: *const bls12_381_g2_prj,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_add_in_place(P: *mut bls12_381_g2_prj, Q: *const bls12_381_g2_prj);
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_diff(
        r: *mut bls12_381_g2_prj,
        P: *const bls12_381_g2_prj,
        Q: *const bls12_381_g2_prj,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_double(r: *mut bls12_381_g2_prj, P: *const bls12_381_g2_prj);
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_double_in_place(P: *mut bls12_381_g2_prj);
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_affine(dst: *mut bls12_381_g2_aff, src: *const bls12_381_g2_prj);
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_from_affine(
        dst: *mut bls12_381_g2_prj,
        src: *const bls12_381_g2_aff,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_batch_affine(
        dst: *const bls12_381_g2_aff,
        src: *const bls12_381_g2_prj,
        n: usize,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_scalar_mul_big_coef(
        P: *mut bls12_381_g2_prj,
        scalar: *const big255,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_scalar_mul_fr_coef(
        P: *mut bls12_381_g2_prj,
        scalar: *const bls12_381_fr,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_scalar_mul_big_coef_vartime(
        P: *mut bls12_381_g2_prj,
        scalar: *const big255,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_scalar_mul_fr_coef_vartime(
        P: *mut bls12_381_g2_prj,
        scalar: *const bls12_381_fr,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_multi_scalar_mul_big_coefs_vartime(
        r: *mut bls12_381_g2_prj,
        coefs: *const big255,
        points: *const bls12_381_g2_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_multi_scalar_mul_fr_coefs_vartime(
        r: *mut bls12_381_g2_prj,
        coefs: *const bls12_381_fr,
        points: *const bls12_381_g2_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_aff_sswu_sha256(
        r: *mut bls12_381_g1_aff,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_jac_sswu_sha256(
        r: *mut bls12_381_g1_jac,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g1_prj_sswu_sha256(
        r: *mut bls12_381_g1_prj,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_aff_sswu_sha256(
        r: *mut bls12_381_g2_aff,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_jac_sswu_sha256(
        r: *mut bls12_381_g2_jac,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
extern "C" {
    pub fn ctt_bls12_381_g2_prj_sswu_sha256(
        r: *mut bls12_381_g2_prj,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct bn254_snarks_fr {
    limbs: [secret_word; 8usize],
}
#[test]
fn bindgen_test_layout_bn254_snarks_fr() {
    const UNINIT: ::core::mem::MaybeUninit<bn254_snarks_fr> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<bn254_snarks_fr>(),
        32usize,
        concat!("Size of: ", stringify!(bn254_snarks_fr))
    );
    assert_eq!(
        ::core::mem::align_of::<bn254_snarks_fr>(),
        4usize,
        concat!("Alignment of ", stringify!(bn254_snarks_fr))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).limbs) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_fr),
            "::",
            stringify!(limbs)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct bn254_snarks_fp {
    limbs: [secret_word; 8usize],
}
